[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "thermex-key-exporter"
version = "0.1.0"
description = "Desktop utility for exporting Thermex local Tuya keys"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { file = "LICENSE" }
authors = [{ name = "Thermex Key Exporter contributors" }]
dependencies = [
  "cryptography>=43",
  "Pillow>=10",
  "qrcode>=8",
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.10",
  "pytest>=8",
  "ruff>=0.8",
]

[project.scripts]
thermex-key-exporter = "thermex_key_exporter.cli:main"

[project.gui-scripts]
thermex-key-exporter-gui = "thermex_key_exporter.gui:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
