[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "thermex-key-exporter"
version = "0.1.0"
description = "Desktop utility for exporting Thermex local Tuya keys"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Thermex Key Exporter contributors" }]
keywords = ["home-assistant", "localtuya", "thermex", "tuya"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Home Automation",
]
dependencies = [
  "certifi>=2024.12.14",
  "cryptography>=43",
  "qrcode>=8",
]

[project.urls]
Homepage = "https://github.com/torquemada163/thermex-key-exporter"
Repository = "https://github.com/torquemada163/thermex-key-exporter"
Issues = "https://github.com/torquemada163/thermex-key-exporter/issues"

[project.optional-dependencies]
gui = [
  "Pillow>=10",
]
dev = [
  "Pillow>=10",
  "build>=1.2",
  "pipx>=1.7",
  "pyinstaller>=6.10",
  "pytest>=8",
  "ruff>=0.8",
  "twine>=6",
]

[project.scripts]
thermex-key-exporter = "thermex_key_exporter.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
thermex_key_exporter = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
